# Go2_state_estimator

./: README.md
champ/include/champ/kinematics/: kinematics.h
champ_base/: CMakeLists.txt  package.xml
champ_base/config/ekf/: base_to_footprint.yaml  footprint_to_odom.yaml
champ_base/include/: foot_contacts.h  kinematics.h  state_estimation.h
champ_base/src/: foot_contacts.cpp  foot_contacts_node.cpp  state_estimation.cpp  state_estimation_node.cpp
champ_msgs/: CMakeLists.txt
champ_msgs/msg/: FootForce.msg
go2_bringup/: CMakeLists.txt  package.xml
go2_bringup/launch/: bringup.launch.py
go2_config/: CMakeLists.txt  package.xml
go2_config/config/gait/: gait.yaml
go2_config/config/joints/: joints.yaml
go2_config/config/links/: links.yaml
go2_config/include/: gait_config.h
go2_config/launch/: bringup.launch.py
go2_description/: CMakeLists.txt  package.xml
go2_description/urdf/: go2.urdf
